<resources>
    <string name="app_name">FastCharger</string>
    <string name="main_temperature">Temperature</string>
    <string name="main_voltage">Voltage</string>
    <string name="main_level">Level</string>
    <string name="technology">Technology</string>
    <string name="health">Health</string>
    <string name="unknown">UNKNOWN</string>
    <string name="battery_health_dead">DEAD</string>
    <string name="battery_health_good">GOOD</string>
    <string name="battery_health_cold">COLD</string>
    <string name="battery_health_over_voltage">OVER_VOLTAGE</string>
    <string name="battery_health_overheat">OVERHEAT</string>
    <string name="battery_health_unspecified_failure">UNSPECIFIED_FAILURE</string>
    <string name="action_settings">Settings</string>
    <string name="main_battery">Battery</string>
    <string name="like_this_app">Like this app?</string>
    <string name="main_rate_summary">Do you have a few seconds to rate 5 star this app? We want to hear your opinion. Thanks!</string>
    <string name="main_rate_title">Love Ultra Fast Charging 5X application ?</string>
    <string name="rate_5_star">Rate 5 Star</string>
    <string name="exit">Exit</string>
    <string name="batter_information">Battery information</string>
    <string name="setting_title">Setting</string>
    <string name="licence1">"                           Ultra Fast Charging 5X
                           Version 1.0, November 2016"</string>
    <string name="setting_license_title">Licence</string>
    <string name="developer_name">HackSkill</string>
    <string name="checkout">Check out</string>
    <string name="share">Share</string>
    <string name="checkout_1">the free app for save your battery with</string>
      <string name="about_app_description">"Save your battery fast charger with
 Super fast battery charger."</string>
    <string name="about_rate_title">Love Ultra Fast Charging 5X application ?</string>
    <string name="about_rate_summary">Do you have a few seconds to rate 5 star this app? We want to hear your opinion. Thanks!</string>
    <string name="about_feedback">FEEDBACK</string>
    <string name="about_review">RATE 5 STAR</string>
    <string name="about_share_app">Recommend to friends</string>
    <string name="about_share_app_summary">If you have a minute, can you please help us to spread in the world about Ultra Fast Charging 5X.</string>

    <string name="setting_about_app">About Application</string>
    <string name="setting_about_us_app_summary">About Ultra Fast Charging 5X</string>
    <string name="setting_check_update">Update</string>
    <string name="setting_check_update_summary">Check for new update</string>
    <string name="setting_feedback">Feedback</string>
    <string name="setting_feedback_summary">Please give us feedback and any suggetion about Ultra Fast Charging 5X</string>
    <string name="setting_more_app">More Apps</string>
    <string name="setting_more_app_summary">Get more application from Ultra Fast Charging 5X</string>
    <string name="setting_rate_app">Rate 5 Star</string>
    <string name="setting_rate_app_summary">Do you have a few seconds to rate this app? We want to hear your opinion</string>
    <string name="setting_share_app">Recommend to friends</string>
    <string name="setting_share_app_summary">Can you please help us to spread in the world about Ultra Fast Charging 5X</string>
    <string name="setting_version">Version</string>
    <string name="setting_about_us_app">About us</string>
    <string name="send_email">Send Email</string>
    <string name="contact_email">hackskill.apps@gmail.com</string>
    <string name="email_placeholder">Please write your problem to us we will try our best to solve it ..</string>
    <string name="license_website">http://hackskill.com</string>
    <string name="close_tool_no_issue">No issue</string>
    <string name="close_tool_location_off">2x Fast Charger</string>
    <string name="close_tool_location_off_desc">Disable location service and your battery will charge 2x faster</string>
    <string name="close_tool_location_off_button">Turn Off Location</string>
    <string name="close_tool_airplane_on">3x Fast Charger</string>
    <string name="close_tool_airplane_on_desc">Enable airplane mode and your battery will charge 3x faster</string>
    <string name="close_tool_airplane_on_button">Turn on airplane mode</string>
    <string name="close_tool_internet_off">2x Fast Charger</string>
    <string name="close_tool_internet_off_desc">Disable mobile data and your battery will charge 2x faster</string>
    <string name="close_tool_internet_off_button">Turn Off Mobile Data</string>
    <string name="close_tool_saver_location_off">2x Battery Save
        r</string>
    <string name="close_tool_saver_location_off_desc">Disable location service and your battery will save 2x</string>
    <string name="close_tool_title_charger">Battery Charger</string>
    <string name="close_tool_title_saver">Battery Saver</string>


    <string name="close_tool_saver_airplane_on">3x Battery Saver</string>
    <string name="close_tool_saver_airplane_on_desc">Enable airplane mode and your battery will save 3x</string>
    <string name="close_tool_saver_internet_off">2x Battery Saver</string>
    <string name="close_tool_saver_internet_off_desc">Disable mobile data and your battery will save 2x</string>
    <string name="fast_charger_ac">AC</string>
    <string name="fast_charger_usb">USB</string>
<string name="fast_charger_complete">"Charge completed
 Please unplug the charger"</string>
    <string name="fast_charger_rate_summary">Do you have a few seconds to rate 5 star this app? We want to hear your opinion. Thanks!</string>
    <string name="fast_charger_rate_title">Love Ultra Fast Charging 5X application ?</string>
    <string name="fast_charger_review">RATE 5 STAR</string>
    <string name="fast_charger_rotate">Rotate</string>
    <string name="fast_charger_share_app">Recommend to friends</string>
    <string name="fast_charger_share_app_summary">If you have a minute, can you please help us to spread in the world about Ultra Fast Charging 5X.</string>
    <string name="fast_charger_timeout">Timeout</string>
    <string name="fast_charger_trickle_charge">"Trickle Charge
 waiting"</string>
    <string name="fast_charger_brightness">Brightness</string>
    <string name="fast_charger_button">START FAST CHARGING</string>
    <string name="fast_charger_fast_charge">"Fast Charge
 on going"</string>
    <string name="fast_charger_feedback">FEEDBACK</string>
    <string name="fast_charger_full_charge">"Full Charge waiting"</string>
    <string name="fast_charger_power_type">Power Type</string>
    <string name="fast_charger_wifi">WiFi</string>
    <string name="fast_charger_bluetooth">Bluetooth</string>

    <string name="fast_charger_mode">Mode</string>
</resources>
