<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg">

    <RelativeLayout
        android:id="@+id/roul_detail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#4d000000">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/toolbar" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tool_bar">

            <TextView
                android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="170.0dip"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5.0dip"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_icon"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="22.0dip" />

            <TextView
                android:id="@+id/app_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5.0dip"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:text="@string/about_app_description"
                android:textColor="@color/white"
                android:textSize="14.0dip" />
        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/roul_detail">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0.0dip"
            android:layout_marginRight="0.0dip">

            <android.support.v7.widget.CardView
                android:id="@+id/about_1"
                android:layout_width="fill_parent"
                android:layout_height="100.0dip"
                android:layout_marginBottom="8.0dip"
                android:layout_marginLeft="16.0dip"
                android:layout_marginRight="16.0dip"
                android:layout_marginTop="16.0dip"
                android:foreground="?android:selectableItemBackground"
                ads:cardCornerRadius="2.0dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15.0dip"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="22.0dip" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50.0dip"
                    android:fontFamily="sans-serif-thin"
                    android:textColor="@android:color/black"
                    android:textSize="18.0dip" />
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/NativeAdContainer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_1"
                android:layout_marginBottom="0.0dip"
                android:layout_marginLeft="0.0dip"
                android:layout_marginRight="0.0dip"
                android:layout_marginTop="0.0dip"
                android:orientation="vertical">
                <!--
                                <com.google.android.gms.ads.NativeExpressAdView
                                    android:id="@id/nativeAdView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentTop="true"
                                    android:layout_centerHorizontal="true"
                                    ads:adSize="FULL_WIDTHx250"
                                    ads:adUnitId="@string/admob_about_native" />-->
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/CardViewRate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/NativeAdContainer"
                android:layout_marginBottom="8.0dip"
                android:layout_marginLeft="16.0dip"
                android:layout_marginRight="16.0dip"
                android:layout_marginTop="8.0dip"
                ads:cardCornerRadius="2.0dip">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/Rlout_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/TxtRateTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:paddingLeft="16.0dip"
                            android:paddingRight="16.0dip"
                            android:paddingTop="24.0dip"
                            android:text="@string/about_rate_title"
                            android:textColor="@color/white"
                            android:textSize="18.0sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/TxtRateDesc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_below="@id/TxtRateTitle"
                            android:paddingLeft="16.0dip"
                            android:paddingRight="16.0dip"
                            android:paddingTop="12.0dip"
                            android:text="@string/about_rate_summary"
                            android:textColor="@color/white"
                            android:textSize="14.0sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/Rlout_action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/Rlout_top"
                        android:padding="8.0dip">

                        <Button
                            android:id="@+id/btn_feedbak"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="8.0dip"
                            android:background="?android:selectableItemBackground"
                            android:padding="8.0dip"
                            android:text="@string/about_feedback"
                            android:textColor="@color/textPreference" />

                        <Button
                            android:id="@+id/btn_ratenow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/btn_feedbak"
                            android:background="?android:selectableItemBackground"
                            android:padding="8.0dip"
                            android:text="@string/about_review"
                            android:textColor="@color/textPreference" />
                    </RelativeLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/CardViewShare"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/CardViewRate"
                android:layout_marginBottom="16.0dip"
                android:layout_marginLeft="16.0dip"
                android:layout_marginRight="16.0dip"
                android:layout_marginTop="8.0dip"
                android:foreground="?android:selectableItemBackground"
                ads:cardCornerRadius="2.0dip">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="16.0dip">

                    <TextView
                        android:id="@+id/TxtShareTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginBottom="12.0dip"
                        android:text="@string/about_share_app"
                        android:textColor="@color/white"
                        android:textSize="18.0sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TxtShareDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/TxtShareTitle"
                        android:layout_marginBottom="16.0dip"
                        android:text="@string/about_share_app_summary"
                        android:textColor="@color/white"
                        android:textSize="14.0sp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/BannerAd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <!--
                <com.google.android.gms.ads.AdView
                    android:id="@id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/Ad_About_Activity_banner" />-->
    </LinearLayout>
</RelativeLayout>